# ZxZeDesk-Rust-Edition-Python-Edition

htmls/contacts_dark_mode/: code.html
htmls/generated_screen_1/: code.html
htmls/generated_screen_2/: code.html
htmls/session_history_dark_mode/: code.html
zxzedesk_tauri/: package-lock.json  package.json
zxzedesk_tauri/src/: index.html  settings.html
zxzedesk_tauri/src-tauri/: Cargo.toml  build_error.txt  build_error_v2.txt  compile_errors.txt  errors.txt  tauri.conf.json
zxzedesk_tauri/src-tauri/src/: audio.rs  capture.rs  connection.rs  input.rs  lib.rs  main.rs  network.rs  tunnel.rs
